--- a/web/styles.css
+++ b/web/styles.css
@@ -5,7 +5,7 @@ body {
 .top-buffer {
   margin:20px 20px 20px;
   padding: 2em 2em 2em;
-  height: 100vh;
+  height: 85vh;
 }
 
 /*form{
@@ -31,6 +31,7 @@ body {
 
 div.shadow {
 	border: 0px solid #ccc;
+	border-radius:1em;
 	}
 
 div.shadow:hover {
@@ -38,4 +39,31 @@ div.shadow:hover {
 	-webkit-box-shadow: 0 0 2em rgba(0, 0, 0, .5);
 	box-shadow: 0 0 2em rgba(0, 0, 0, .5);
 	}
+
+#circle {
+	width: 60px;
+	height: 60px;
+	background: #FFBBF1;
+	-moz-border-radius: 60px;
+	-webkit-border-radius: 60px;
+	border-radius: 30px;
+	margin: 1em;
+}
+
+#square {
+	width: 60px;
+	height: 60px;
+	background: #A2FFFC;
+	margin: 1em;
+}
+
+#triangle-up {
+	width: 0;
+	height: 0;
+	border-left: 30px solid transparent;
+	border-right: 30px solid transparent;
+	border-bottom: 60px solid #5FB2B0;
+	margin:1em;
+}
+
 
