--- a/web/styles.css
+++ b/web/styles.css
@@ -12,6 +12,10 @@ body {
 	margin: 2em 2em 2em;
 }*/
 
+label {
+  font-size: 20px;
+}
+
 #playlist_results{
 	font-size: small;
 	margin-left: 10px;
@@ -182,4 +186,3 @@ div.shadow:hover {
 .ui-helper-hidden-accessible{
 	display: none;
 }
-
