--- a/web/styles.css
+++ b/web/styles.css
@@ -2,6 +2,14 @@ body {
   background-color: #fff;
 }
 
+.list-group-item {
+  font-size: 16px;
+}
+
+button.btn.btn-md.btn-danger.delete-button {
+  float: right;
+}
+
 .description-settings {
   font-size: 22px;
   margin-bottom: 50px;
