--- a/web/styles.css
+++ b/web/styles.css
@@ -22,8 +22,8 @@ button.btn.btn-md.btn-danger.delete-button {
 
 .top-buffer {
   margin:20px 20px 20px;
-  padding: 2em 2em 2em;
-  height: 85vh;
+  /*padding: 2em 2em 2em;*/
+  /*height: 85vh;*/
 }
 
 div.row h2{
