--- a/web/styles.css
+++ b/web/styles.css
@@ -11,57 +11,57 @@ button.btn.btn-md.btn-danger.delete-button {
 }
 
 #searchsubmit{
-  background-color: #56c2b4;
-  border-color: #56c2b4;
+  background-color: #8BD5CB;
+  border-color: #8BD5CB;
 }
 
 #searchsubmit:hover { 
-    background-color: #2f8378;
+    background-color: #5296ad;
 }
 
 #graphsubmit{
-  background-color: #56c2b4;
-  border-color: #56c2b4;
+  background-color: #8BD5CB;
+  border-color: #8BD5CB;
 }
 
 #graphsubmit:hover { 
-    background-color: #2f8378;
+    background-color: #5296ad;
 }
 
 #searchhelp{
-  background-color: #f3bb0c;
-  border-color: #f3bb0c;
+  background-color: #F6CE50;
+  border-color: #F6CE50;
 }
 
 #searchhelp:hover { 
-    background-color: #aa8308;
+    background-color: #f3bb0c;
 }
 
 #back-to-settings{
-  background-color: #cf498a;
-  border-color: #cf498a;
+  background-color: #D86A9F;
+  border-color: #D86A9F;
 }
 
 #back-to-settings:hover { 
-  background-color: #a12b64;
+  background-color: #ca357d;
 }
 
 #back-to-graph{
-  background-color: #cf498a;
-  border-color: #cf498a;
+  background-color: #D86A9F;
+  border-color: #D86A9F;
 }
 
 #back-to-graph:hover { 
-  background-color: #a12b64;
+  background-color: #ca357d;
 }
 
 .btn-danger{
-  background-color: #cf498a !important;
-  border-color: #cf498a !important;
+  background-color: #D86A9F !important;
+  border-color: #D86A9F !important;
 }
 
 .btn-danger:hover { 
-  background-color: #a12b64 !important;
+  background-color: #ca357d !important;
 }
 
 .description-settings {
@@ -164,7 +164,6 @@ div.shadow:hover {
 .button_back{
   top: 38px;
   position: relative;
-  margin-left: 10px;
 }
 
 
